AI Platform MVP: Dashboard, Training, Inference, Dataset Manager

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# --- Python ---
+venv/
+__pycache__/
+*.py[cod]
+.pytest_cache/
+
+models/*.pt
+models/*.bin
+data/
+*.pth
